syntax = "proto3";
option go_package="proto.bank";

service DirectOrganService {
  rpc Create(CreateDirectOrganRequest) returns (DirectOrganProfileResponse);
  rpc Read(SingleDirectOrganRequest) returns (DirectOrganProfileResponse);
  rpc Update(UpdateDirectOrganRequest) returns (SuccessResponse);
  rpc Delete(SingleDirectOrganRequest) returns (SuccessResponse);
}

message CreateDirectOrganRequest{
  int64 code = 1;
  string name = 2;
  string short_name = 3;
  string crud_dates = 4;
  int64 cbu_code = 5;
}

message SingleDirectOrganRequest{
  int64 id = 1;
}

message DirectOrganProfileResponse{
  int64 id = 1;
  string name = 2;
  int64 code = 3;
  string crud_dates = 4;
  int64 cbu_code = 5;
}

message SuccessResponse{
  string response = 1;
}


message UpdateDirectOrganRequest{
  int64 id = 1;
  string name = 2;
  int64 code = 3;
  string crud_dates = 4;
  int64 cbu_code = 5;
}